# dexnotes

./: .gitignore  README.md  notes.db  notes_cli.py  pyproject.toml  standup_report_2025-03-31.md
dexnotes/: __main__.py  db.py  export.py  models.py  notes.py  utils.py
